--- a/[L3] pricing section/index.html
+++ b/[L3] pricing section/index.html
@@ -5,31 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Вёрстка секции Tabs</title>
+    <title>tabs section</title>
 </head>
 <body>
-    <section>
+    <section class="tabs">
         <div class="wrapper">
-            <div class="pricing_options">
-                <div class="section_title">
-                    <h2 class="section_title_chapter">PRICING OPTIONS</h2>
+                <div class="tabs-title">
+                    <h2 class="tabs-title_name">PRICING OPTIONS</h2>
+                    <hr class="tabs-title_underline">
+                    <p class="tabs-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <hr class="title_underline">
-                <div class="signature_title">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="price_content">
-                        <ul class="price_cart price__first">
-                            <li class="price_cart_item item__class">Basic</li>
-                            <li class="price_cart_item cart_cost">$10</li>
-                            <li class="price_cart_item cart_life">Free for life</li>
-                            <li class="price_cart_item">1 gb of space</li>
-                            <li class="price_cart_item">1 gb of space</li>
-                            <li class="price_cart_item">1 gb of space</li>
-                            <li class="price_cart_item">1 gb of space</li>
-                            <li class="price_cart_item">1 gb of space</li>
-                            <li class="price_cart_item">1 gb of space</li>
-                        </ul>
+                <div class="tabs-price-list">
+                    <ul class="tabs-price-cart price__first">
+                        <!-- продолжить отсюда -->
+                        <li class="price_cart_item item__class">Basic</li>
+                        <li class="price_cart_item cart_cost">$10</li>
+                        <li class="price_cart_item cart_life">Free for life</li>
+                        <li class="price_cart_item">1 gb of space</li>
+                        <li class="price_cart_item">1 gb of space</li>
+                        <li class="price_cart_item">1 gb of space</li>
+                        <li class="price_cart_item">1 gb of space</li>
+                        <li class="price_cart_item">1 gb of space</li>
+                        <li class="price_cart_item">1 gb of space</li>
+                    </ul>
                     <ul class="price_cart price__second">
                         <li class="price_cart_item item__class">Optima</li>
                         <li class="price_cart_item cart_cost">$20</li>
@@ -53,7 +51,6 @@
                         <li class="price_cart_item">1 gb of space</li>
                     </ul>
                 </div>
-            </div>
         </div>
     </section>
 </body>
