pricing section correction

--- a/[L3] pricing section/index.html
+++ b/[L3] pricing section/index.html
@@ -8,47 +8,46 @@
     <title>tabs section</title>
 </head>
 <body>
-    <section class="tabs">
+    <section class="pricing">
         <div class="wrapper">
-                <div class="tabs-title">
-                    <h2 class="tabs-title_name">PRICING OPTIONS</h2>
-                    <hr class="tabs-title_underline">
-                    <p class="tabs-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="pricing-title">
+                    <h2 class="pricing-title_name">PRICING OPTIONS</h2>
+                    <hr class="pricing-title_underline">
+                    <p class="pricing-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="tabs-price-list">
-                    <ul class="tabs-price-cart price__first">
-                        <!-- продолжить отсюда -->
-                        <li class="price_cart_item item__class">Basic</li>
-                        <li class="price_cart_item cart_cost">$10</li>
-                        <li class="price_cart_item cart_life">Free for life</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
+                <div class="pricing-list">
+                    <ul class="pricing-cart pricing-cart__first">
+                        <li class="pricing-cart_item pricing-cart_item__class">Basic</li>
+                        <li class="pricing-cart_item pricing-cart_item__cost">$10</li>
+                        <li class="pricing-cart_item pricing-cart_item__free">Free for life</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
                     </ul>
-                    <ul class="price_cart price__second">
-                        <li class="price_cart_item item__class">Optima</li>
-                        <li class="price_cart_item cart_cost">$20</li>
-                        <li class="price_cart_item cart_life">Free for life</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
+                    <ul class="pricing-cart pricing-cart__second">
+                        <li class="pricing-cart_item pricing-cart_item__class">Optima</li>
+                        <li class="pricing-cart_item pricing-cart_item__cost">$20</li>
+                        <li class="pricing-cart_item pricing-cart_item__free">Free for life</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
                     </ul>
-                    <ul class="price_cart price__three">
-                        <li class="price_cart_item item__class">Pro</li>
-                        <li class="price_cart_item cart_cost">$30</li>
-                        <li class="price_cart_item cart_life">Free for life</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
-                        <li class="price_cart_item">1 gb of space</li>
+                    <ul class="pricing-cart pricing-cart__third">
+                        <li class="pricing-cart_item pricing-cart_item__class">Pro</li>
+                        <li class="pricing-cart_item pricing-cart_item__cost">$30</li>
+                        <li class="pricing-cart_item pricing-cart_item__free">Free for life</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
+                        <li class="pricing-cart_item">1 gb of space</li>
                     </ul>
                 </div>
         </div>
