added section (banner and contact us), modified

--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -40,8 +40,41 @@
 
 <!-- BANNER -->
 
-	<section class="banner">
-	</section>
+	<main class="banner">
+		<div class="wrapper">
+			<div class="banner-content">
+				<div class="banner-text">
+					<div class="banner-text_logo">
+						<svg width="170" height="55" viewBox="0 0 170 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path
+								d="M20.3089 0H31.161L51.3924 55H40.3853L35.2693 41.2887H16.0456L11.0071 55H0L20.3089 0ZM33.3314 33.7747L25.735 11.0775L17.8284 33.7747H33.3314Z"
+								fill="white" />
+							<path
+								d="M63.165 0L76.8076 20.2958L90.3728 0H102L82.9313 27.8873L101.38 55H89.7526L76.8076 35.4789L63.7851 55H52.0804L70.5289 27.8873L51.4602 0H63.165Z"
+								fill="white" />
+							<path d="M107 55V0H117.64V55H107Z" fill="#EC7979" />
+							<path d="M170 9.37324H152.499V55H141.936V9.37324H124.435V0H170V9.37324Z" fill="#EC7979" />
+						</svg>
+					</div>
+					<h1 class="banner-text_title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
+					<p class="banner-text_caption">Lorem ipsum dolor sit amet,</p>
+					<p class="banner-text_caption">consectetur adipiscing elit</p>
+					<a class="banner-text_download" href="#">Download</a>
+				</div>
+				<div class="banner-form">
+					<div class="banner-form_title">
+						<h3>TRY YOUR FREE TRIAL TODAY</h3>
+					</div>
+					<form action="#" name="banner-form">
+						<input class="banner-form_input" type="name" placeholder="Name">
+						<input class="banner-form_input" type="email" placeholder="Email">
+						<input class="banner-form_input"  type="password" placeholder="Password">
+						<button class="banner-form_button" type="sumbit">Get Started</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</main>
 
 <!-- SOCIAL MEDIA -->
 
@@ -91,7 +124,9 @@
 						</p>
 						<button class="tabs_download">Download</button>
 					</div>
-					<img class="statue_of_liberty" src="assets/img/4. tabs/statue_of_liberty.png" alt="">
+					<div class="tabs_img">
+						<img src="assets/img/4. tabs/statue_of_liberty.png" alt="">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -259,7 +294,23 @@
 
 <section class="contact-us-section">
 	<div class="wrapper">
-
+		<div class="contact-us-content">
+			<div class="contact-us-title">
+				<h2 class="contact-us-title_name">CONTACT US</h2>
+				<P class="contact-us-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</P>
+			</div>
+			<form class="contact-us-form" action="#" name="contact-us">
+				<div class="contact-us-form_data">
+					<input type="name" placeholder="Name">
+					<input type="email" placeholder="Email">
+					<input type="password" placeholder="Password">
+				</div>
+				<div class="contact-us-form_message">
+					<input type="text" placeholder="Message">
+				</div>
+			</form>
+			<button class="contact-us-form_button" type="submit" form="contact-us">Send Message</button>
+		</div>
 	</div>
 </section>
 
