--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -66,9 +66,9 @@
 						<h3>TRY YOUR FREE TRIAL TODAY</h3>
 					</div>
 					<form action="#" name="banner-form">
-						<input class="banner-form_input" type="name" placeholder="Name">
-						<input class="banner-form_input" type="email" placeholder="Email">
-						<input class="banner-form_input"  type="password" placeholder="Password">
+						<input class="banner-form_input" required type="name" placeholder="Name">
+						<input class="banner-form_input" required type="email" placeholder="Email">
+						<input class="banner-form_input" required  type="password" placeholder="Password">
 						<button class="banner-form_button" type="sumbit">Get Started</button>
 					</form>
 				</div>
@@ -122,7 +122,7 @@
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod<br>
 							bibendum laoreet.
 						</p>
-						<button class="tabs_download">Download</button>
+						<a class="tabs_download" href="#">Download</a>
 					</div>
 					<div class="tabs_img">
 						<img src="assets/img/4. tabs/statue_of_liberty.png" alt="">
@@ -228,47 +228,51 @@
 			</div>
 			<div class="customers-reviews">
 				<div class="customers-reviews_cart">
-					<p>Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Doloribus
-						accusamus expedita repellat similique
-						odio aspernatur ex, architecto eaque
-						quo suscipit.</p>
-				</div>
-				<div class="customers-reviews_cart">
-					<p>Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Doloribus
-						accusamus expedita repellat similique
-						odio aspernatur ex, architecto eaque
-						quo suscipit.</p>
-				</div>
-				<div class="customers-reviews_cart">
-					<p>Lorem ipsum dolor sit amet,
-						consectetur adipisicing elit. Doloribus
-						accusamus expedita repellat similique
-						odio aspernatur ex, architecto eaque
-						quo suscipit.</p>
-				</div>
-			</div>
-			<div class="customers-data">
-				<div class="customers-data_cart">
-					<img class="customers-data_photo" src="assets/img/7. customers/Davis Rhiel Madsen.svg" alt="Davis Rhiel Madsen">
-					<div class="customers-data_text">
-						<p class="customers-data_name">Davis Rhiel Madsen</p>
-						<p class="customers-data_post">Manager</p>
+					<div class="customers-reviews_comment">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing elit. Doloribus
+							accusamus expedita repellat similique
+							odio aspernatur ex, architecto eaque
+							quo suscipit.</p>
+					</div>
+					<div class="customers-reviews_data">
+						<img class="customers-data_photo" src="assets/img/customers/Davis Rhiel Madsen.svg" alt="Davis Rhiel Madsen">
+						<div class="customers-data_text">
+							<p class="customers-data_name">Davis Rhiel Madsen</p>
+							<p class="customers-data_post">Manager</p>
+						</div>
 					</div>
 				</div>
-				<div class="customers-data_cart">
-					<img class="customers-data_photo" src="assets/img/7. customers/Jaydon Rosser.svg" alt="Jaydon Rosser">
-					<div class="customers-data_text">
-						<p class="customers-data_name">Jaydon Rosser</p>
-						<p class="customers-data_post">Manager</p>
+				<div class="customers-reviews_cart">
+					<div class="customers-reviews_comment">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing elit. Doloribus
+							accusamus expedita repellat similique
+							odio aspernatur ex, architecto eaque
+							quo suscipit.</p>
+					</div>
+					<div class="customers-reviews_data">
+						<img class="customers-data_photo" src="assets/img/customers/Jaydon Rosser.svg" alt="Jaydon Rosser">
+						<div class="customers-data_text">
+							<p class="customers-data_name">Jaydon Rosser</p>
+							<p class="customers-data_post">Manager</p>
+						</div>
 					</div>
 				</div>
-				<div class="customers-data_cart">
-					<img class="customers-data_photo" src="assets/img/7. customers/Cooper Dorwart.svg" alt="Cooper Dorwart">
-					<div class="customers-data_text">
-						<p class="customers-data_name">Cooper Dorwart</p>
-						<p class="customers-data_post">Manager</p>
+				<div class="customers-reviews_cart">
+					<div class="customers-reviews_comment">
+						<p>Lorem ipsum dolor sit amet,
+							consectetur adipisicing elit. Doloribus
+							accusamus expedita repellat similique
+							odio aspernatur ex, architecto eaque
+							quo suscipit.</p>
+					</div>
+					<div class="customers-reviews_data">
+						<img class="customers-data_photo" src="assets/img/customers/Cooper Dorwart.svg" alt="Cooper Dorwart">
+						<div class="customers-data_text">
+							<p class="customers-data_name">Cooper Dorwart</p>
+							<p class="customers-data_post">Manager</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -299,17 +303,17 @@
 				<h2 class="contact-us-title_name">CONTACT US</h2>
 				<P class="contact-us-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</P>
 			</div>
-			<form class="contact-us-form" action="#" name="contact-us">
+			<form class="contact-us-form" action="#" name="contact-us" id="contact-us" method="get">
 				<div class="contact-us-form_data">
-					<input type="name" placeholder="Name">
-					<input type="email" placeholder="Email">
-					<input type="password" placeholder="Password">
+					<input type="name" required placeholder="Name">
+					<input type="email" required placeholder="Email">
+					<input type="password" required placeholder="Password">
 				</div>
 				<div class="contact-us-form_message">
 					<input type="text" placeholder="Message">
 				</div>
+				<button class="contact-us-form_button" type="submit">Send Message</button>
 			</form>
-			<button class="contact-us-form_button" type="submit" form="contact-us">Send Message</button>
 		</div>
 	</div>
 </section>
