--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -57,19 +57,29 @@
 						</svg>
 					</div>
 					<h1 class="banner-text_title">MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
-					<p class="banner-text_caption">Lorem ipsum dolor sit amet,</p>
-					<p class="banner-text_caption">consectetur adipiscing elit</p>
+					<div class="banner-text_caption">
+						<p>Lorem ipsum dolor sit amet,</p>
+						<p>consectetur adipiscing elit</p>
+					</div>
 					<a class="banner-text_download" href="#">Download</a>
 				</div>
 				<div class="banner-form">
 					<div class="banner-form_title">
-						<h3>TRY YOUR FREE TRIAL TODAY</h3>
+						<h3>TRY YOUR <span class="bannet-form_title banner-form_title__free__txt">FREE</span> TRIAL TODAY</h3>
 					</div>
 					<form action="#" name="banner-form">
-						<input class="banner-form_input" required type="name" placeholder="Name">
-						<input class="banner-form_input" required type="email" placeholder="Email">
-						<input class="banner-form_input" required  type="password" placeholder="Password">
-						<button class="banner-form_button" type="sumbit">Get Started</button>
+						<div class="banner-form_input">
+							<input required type="name" placeholder="Name">
+						</div>
+						<div class="banner-form_input">
+							<input required type="email" placeholder="Email">
+						</div>
+						<div class="banner-form_input">
+							<input required  type="password" placeholder="Password">
+						</div>
+						<div class="banner-form_button">
+							<button type="sumbit">Get Started</button>
+						</div>
 					</form>
 				</div>
 			</div>
