--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -45,7 +45,7 @@
 			<div class="banner-content">
 				<div class="banner-text">
 					<div class="banner-text_logo">
-						<svg width="170" height="55" viewBox="0 0 170 55" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<svg class="banner-text_logo_img" width="170" height="55" viewBox="0 0 170 55" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path
 								d="M20.3089 0H31.161L51.3924 55H40.3853L35.2693 41.2887H16.0456L11.0071 55H0L20.3089 0ZM33.3314 33.7747L25.735 11.0775L17.8284 33.7747H33.3314Z"
 								fill="white" />
@@ -124,18 +124,18 @@
 				<div class="tabs_content">
 					<div class="tabs_content_text">
 						<h3 class="tabs_title">Tabs with soft transitioning effect.</h3>
-						<p class="tabs_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod<br>
-							bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra<br>
-							justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque<br>
-							penatibus et magnis dis parturient montes.<br>
-							<br>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod<br>
+						<p class="tabs_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+							bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+							justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+							penatibus et magnis dis parturient montes.
+						</p>
+						<p class="tabs_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
 							bibendum laoreet.
 						</p>
 						<a class="tabs_download" href="#">Download</a>
 					</div>
 					<div class="tabs_img">
-						<img src="assets/img/4. tabs/statue_of_liberty.png" alt="">
+						<img src="assets/img/tabs/statue_of_liberty.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -149,13 +149,12 @@
 		<div class="wrapper">
 			<div class="awesome-title">
 				<h2 class="awesome-title_name">WHY THIS IS AWESOME</h2>
-				<hr class="awesome-title_underline">
 				<p class="awesome-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 			<div class="awesome-carts">
 				<div class="awesome-carts_cart">
 					<div class="cart_img cart_img__first">
-						<img src="assets/img/5. awesome/lamp_icon.svg" alt="">
+						<img src="assets/img/awesome/lamp_icon.svg" alt="">
 					</div>
 					<h4>Thoughtful Design</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
@@ -163,7 +162,7 @@
 				</div>
 				<div class="awesome-carts_cart awesome-carts_cart__second">
 					<div class="cart_img cart_img__second">
-						<img src="assets/img/5. awesome/keyboard_icon.svg" alt="">
+						<img src="assets/img/awesome/keyboard_icon.svg" alt="">
 					</div>
 					<h4>Thoughtful Design</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
@@ -171,7 +170,7 @@
 				</div>
 				<div class="awesome-carts_cart">
 					<div class="cart_img cart_img__third">
-						<img src="assets/img/5. awesome/lightning_icon.svg" alt="">
+						<img src="assets/img/awesome/lightning_icon.svg" alt="">
 					</div>
 					<h4>Thoughtful Design</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
@@ -187,7 +186,6 @@
 		<div class="wrapper">
 			<div class="pricing-title">
 				<h2 class="pricing-title_name">PRICING OPTIONS</h2>
-				<hr class="pricing-title_underline">
 				<p class="pricing-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			</div>
 			<div class="pricing-list">
@@ -246,14 +244,16 @@
 							quo suscipit.</p>
 					</div>
 					<div class="customers-reviews_data">
-						<img class="customers-data_photo" src="assets/img/customers/Davis Rhiel Madsen.svg" alt="Davis Rhiel Madsen">
+						<div class="customers-data_container">
+							<img class="customers-data_photo" src="assets/img/customers/keanu.jpg" alt="Davis Rhiel Madsen">
+						</div>
 						<div class="customers-data_text">
 							<p class="customers-data_name">Davis Rhiel Madsen</p>
 							<p class="customers-data_post">Manager</p>
 						</div>
 					</div>
 				</div>
-				<div class="customers-reviews_cart">
+				<div class="customers-reviews_cart customers-reviews_cart_second">
 					<div class="customers-reviews_comment">
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing elit. Doloribus
@@ -262,7 +262,9 @@
 							quo suscipit.</p>
 					</div>
 					<div class="customers-reviews_data">
-						<img class="customers-data_photo" src="assets/img/customers/Jaydon Rosser.svg" alt="Jaydon Rosser">
+						<div class="customers-data_container">
+							<img class="customers-data_photo" src="assets/img/customers/anne.jpg" alt="Jaydon Rosser">
+						</div>
 						<div class="customers-data_text">
 							<p class="customers-data_name">Jaydon Rosser</p>
 							<p class="customers-data_post">Manager</p>
@@ -278,7 +280,9 @@
 							quo suscipit.</p>
 					</div>
 					<div class="customers-reviews_data">
-						<img class="customers-data_photo" src="assets/img/customers/Cooper Dorwart.svg" alt="Cooper Dorwart">
+						<div class="customers-data_container">
+							<img class="customers-data_photo" src="assets/img/customers/tom.jpg" alt="Cooper Dorwart">
+						</div>
 						<div class="customers-data_text">
 							<p class="customers-data_name">Cooper Dorwart</p>
 							<p class="customers-data_post">Manager</p>
@@ -314,13 +318,15 @@
 				<P class="contact-us-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</P>
 			</div>
 			<form class="contact-us-form" action="#" name="contact-us" id="contact-us" method="get">
-				<div class="contact-us-form_data">
-					<input type="name" required placeholder="Name">
-					<input type="email" required placeholder="Email">
-					<input type="password" required placeholder="Password">
-				</div>
-				<div class="contact-us-form_message">
-					<input type="text" placeholder="Message">
+				<div class="contact-us-form_input">
+					<div class="contact-us-form_input_data">
+						<input type="name" required placeholder="Name">
+						<input type="email" required placeholder="Email">
+						<input type="password" required placeholder="Password">
+					</div>
+					<div class="contact-us-form_input_message">
+						<textarea placeholder="Message"></textarea>
+					</div>
 				</div>
 				<button class="contact-us-form_button" type="submit">Send Message</button>
 			</form>
