--- a/AXIT/index.html
+++ b/AXIT/index.html
@@ -25,15 +25,21 @@
 						</svg>
 					</a>
 				</div>
-				<nav class="axit-nav">
-					<ul>
-						<li><a class="axit-nav_item" href="#">Features</a></li>
-						<li><a class="axit-nav_item" href="#">About</a></li>
-						<li><a class="axit-nav_item" href="#">Pricing</a></li>
-						<li><a class="axit-nav_item" href="#">Reviews</a></li>
-						<li><a class="axit-nav_item" href="#">Contact</a></li>
-					</ul>
-				</nav>
+				<div class="burger-menu">
+					<input id="menu__toggle" type="checkbox" />
+					<label class="menu__btn" for="menu__toggle">
+						<span></span>
+					</label>
+					<nav class="axit-nav">
+						<ul class="axit-nav_menu">
+							<li><a class="axit-nav_item" href="#">Features</a></li>
+							<li><a class="axit-nav_item" href="#">About</a></li>
+							<li><a class="axit-nav_item" href="#">Pricing</a></li>
+							<li><a class="axit-nav_item" href="#">Reviews</a></li>
+							<li><a class="axit-nav_item" href="#">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -93,8 +99,10 @@
 			<div class="social-media">
 				<div class="social-media_content">
 					<h3 class="social-media_content_title">Social Media</h3>
-					<p class="social-media_content_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						Aenean euismod bibendum laoreet.</p>
+					<div class="social-media_content_text">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+						<p>Aenean euismod bibendum laoreet.</p>
+					</div>
 				</div>
 				<div class="social-media_link">
 					<ul class="social-media_link_list">
@@ -116,10 +124,10 @@
 	<section class="tabs-section">
 		<div class="wrapper">
 			<div class="tabs">
-				<ul class="tabs_button">
-					<li class="tabs_button1">TAB 1</li>
-					<li class="tabs_button2">TAB 2</li>
-					<li class="tabs_button3">TAB 3</li>
+				<ul class="tabs_section_button">
+					<li class="tabs_button tabs_button1">TAB 1</li>
+					<li class="tabs_button tabs_button2">TAB 2</li>
+					<li class="tabs_button tabs_button3">TAB 3</li>
 				</ul>
 				<div class="tabs_content">
 					<div class="tabs_content_text">
@@ -235,7 +243,7 @@
 				<P class="customers-title_caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</P>
 			</div>
 			<div class="customers-reviews">
-				<div class="customers-reviews_cart">
+				<div class="customers-reviews_cart customers-reviews_cart__first">
 					<div class="customers-reviews_comment">
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing elit. Doloribus
@@ -253,7 +261,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="customers-reviews_cart customers-reviews_cart_second">
+				<div class="customers-reviews_cart customers-reviews_cart__second">
 					<div class="customers-reviews_comment">
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing elit. Doloribus
@@ -271,7 +279,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="customers-reviews_cart">
+				<div class="customers-reviews_cart customers-reviews_cart__third">
 					<div class="customers-reviews_comment">
 						<p>Lorem ipsum dolor sit amet,
 							consectetur adipisicing elit. Doloribus
